# future_process

./: CMakeLists.txt  readme.md
dependent_projects/: CMakeLists.txt  CMakeListsCompiler.txt  dependencies.txt
include/daw/: daw_channel.h  daw_collection_channel.h  daw_future_process.h  daw_process.h  daw_semaphore.h  daw_shared_memory.h  daw_shared_mutex.h  daw_string_channel.h  future_process.h  ipc_pipe.h
src/: future_process.cpp  ipc_pipe.cpp
tests/: channel_test.cpp  collection_channel_test.cpp  future_process_test.cpp  process_test.cpp  semaphore_test.cpp  shared_mutex_test.cpp  string_channel_test.cpp
